--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 .container {
   width: 100%;
   min-height: 100vh;
-  background: linear-gradient(to bottom, #d5dee7 0%, #e8ebf2 50%, #e2e7ed 100%),
+  background: linear-gradient(to bottom, #e9edf1 0%, #e8ebf2 50%, #e2e7ed 100%),
     linear-gradient(
       to bottom,
       rgba(0, 0, 0, 0.02) 50%,
@@ -544,4 +544,7 @@ button.gray:hover {
   to {
     transform: rotate(-360deg);
   }
+}
+.vector-box{
+  background-color: #b0d8f856;
 }
