dre left: gone for withdraw

--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -120,3 +120,22 @@
   background: rgb(37, 131, 207);
   border-radius: 100px;
 }
+
+@media (width < 580px){
+  .sidebar {
+    width: 75px;
+  } 
+  .sidebar .avatar{
+    width: 35px;
+    height: 35px;
+  }
+  .sidebar .name{
+    display: none;
+  }
+  .navigation label{
+    display: none;
+  }
+  .navigation text{
+    display: none;
+  }
+}
