--- a/src/App.css
+++ b/src/App.css
@@ -11,17 +11,25 @@
   width: 100%;
   min-height: 100vh;
   background: linear-gradient(to bottom, #e9edf1 0%, #e8ebf2 50%, #e2e7ed 100%),
-    linear-gradient(
-      to bottom,
+    linear-gradient(to bottom,
       rgba(0, 0, 0, 0.02) 50%,
       rgba(255, 255, 255, 0.02) 61%,
-      rgba(0, 0, 0, 0.02) 73%
-    ),
+      rgba(0, 0, 0, 0.02) 73%),
     linear-gradient(33deg, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%);
   background-blend-mode: normal, color-burn;
   display: flex;
   flex-direction: column;
   height: auto;
+}
+
+.item-modal {
+  background: linear-gradient(to bottom, #e9edf1 0%, #e8ebf2 50%, #e2e7ed 100%),
+    linear-gradient(to bottom,
+      rgba(0, 0, 0, 0.02) 50%,
+      rgba(255, 255, 255, 0.02) 61%,
+      rgba(0, 0, 0, 0.02) 73%),
+    linear-gradient(33deg, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%);
+  background-blend-mode: normal, color-burn;
 }
 
 .bin-card {
@@ -164,6 +172,12 @@ div.select-dropdown p.no-data {
   padding-left: 250px;
 }
 
+@media (width < 580px) {
+  .component-wrapper {
+    padding-left: 80px;
+  }
+}
+
 .h1-header {
   color: rgb(37, 131, 207);
   font-weight: bold;
@@ -299,6 +313,7 @@ div.select-dropdown p.no-data {
   width: 250px;
   margin-left: 20px;
 }
+
 .category {
   width: 200px;
   margin-left: 20px;
@@ -529,10 +544,12 @@ button.gray:hover {
   padding-top: 2px;
   padding-left: 10px;
 }
-.dropdown-row li :not(:last-of-type){
+
+.dropdown-row li :not(:last-of-type) {
   border-bottom: 1px solid #999;
 }
-.dropdown-row:hover{
+
+.dropdown-row:hover {
   background-color: #03af70;
   transition: 0.18s ease-in-out;
 }
@@ -541,10 +558,12 @@ button.gray:hover {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(-360deg);
   }
 }
-.vector-box{
+
+.vector-box {
   background-color: #b0d8f856;
 }
