--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,7 @@
   height: 40px;
   border-radius: 6px;
   padding: 0px 10px;
+  padding-right: 0px;
   width: 100%;
   cursor: pointer;
   display: flex;
