--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,12 @@
   width: 100%;
   min-height: 100vh;
   background: linear-gradient(to bottom, #e9edf1 0%, #e8ebf2 50%, #e2e7ed 100%),
-    linear-gradient(to bottom,
+    linear-gradient(
+      to bottom,
       rgba(0, 0, 0, 0.02) 50%,
       rgba(255, 255, 255, 0.02) 61%,
-      rgba(0, 0, 0, 0.02) 73%),
+      rgba(0, 0, 0, 0.02) 73%
+    ),
     linear-gradient(33deg, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%);
   background-blend-mode: normal, color-burn;
   display: flex;
@@ -24,10 +26,12 @@
 
 .item-modal {
   background: linear-gradient(to bottom, #e9edf1 0%, #e8ebf2 50%, #e2e7ed 100%),
-    linear-gradient(to bottom,
+    linear-gradient(
+      to bottom,
       rgba(0, 0, 0, 0.02) 50%,
       rgba(255, 255, 255, 0.02) 61%,
-      rgba(0, 0, 0, 0.02) 73%),
+      rgba(0, 0, 0, 0.02) 73%
+    ),
     linear-gradient(33deg, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%);
   background-blend-mode: normal, color-burn;
 }
@@ -179,7 +183,7 @@ div.select-dropdown p.no-data {
 
 @media (width < 580px) {
   .component-wrapper {
-    padding-left: 80px;
+    padding-left: 0px;
   }
 }
 
