--- a/src/Components/QRCode.css
+++ b/src/Components/QRCode.css
@@ -1,10 +1,14 @@
 .qr-container{
-    margin-left: 40px;
+    margin-left: 19px;
     width: 60%;
 }
 
 .qr-code{
-    display: inline-flex;
-    margin-right: 30px;
+    display: inline-block;
     margin-bottom: 30px;
+}
+
+.qr{
+    width: 200px;
+    display: inline-flex;
 }
