--- a/src/Components/Printable/Report.css
+++ b/src/Components/Printable/Report.css
@@ -46,13 +46,24 @@
     margin-left: 40px;
     padding: 15px;
     border: 1px black solid;
-    width: 35%;
+    width: 38%;
     margin-bottom: 10px;
 }
 
 .tag-head{
     text-align: center;
     font-weight: 600;
+}
+
+.tag-data{
+    font-weight: 600;
+    border-bottom: 1px solid black;
+    box-sizing: border-box;
+    width: 300px;
+    padding-bottom: 2px;
+    margin-left: auto;
+    margin-right: 24px;
+    display: block;
 }
 
 .tag-content{
@@ -66,3 +77,32 @@
     margin-top: 40px;
     position: relative;
 }
+
+.tag-label{
+    margin-right: 10px;
+    font-size: 14px;
+}
+  
+  @media screen and (min-width: 600px) and (max-width: 1366px) {
+    .tag{
+        width: 44%;
+    }
+    .tag-label{
+        font-size: 12px;
+    }
+    .tag-labels{
+        font-size: 12px;
+        margin-right: 80px;
+    }
+    .tag-data{
+        margin-bottom: 5px;
+        font-size: 12px;
+    }
+    .tag-head {
+      font-size: 0.7rem;
+    }
+    .tag-image{
+        width: 110px;
+        height: 180px;
+    }
+  }
