--- a/src/Components/Table.css
+++ b/src/Components/Table.css
@@ -110,8 +110,77 @@
     border: 1px solid black; 
     padding: 5px;
     font-size: 11px;
+    font-family: Calibri, Arial, sans-serif;
 }
 
 .par-table .table_header{
   text-align: center;
 }
+
+.head{
+  font-family: Calibri, Arial, sans-serif;
+}
+
+.type{
+  font-family: 'Libre Baskerville', serif;
+}
+
+.note{
+  font-family: Calibri, Arial, sans-serif;
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.text-container {
+  display: flex;
+  flex-direction: column;
+}
+.text {
+  font-size: 12px;
+}
+.head {
+  font-weight: bold;
+}
+.logo-left {
+  width: 50px;
+  height: auto;
+  margin-left: 20%; /* Adjust the margin for the left image */
+}
+.logo-right {
+  width: 50px;
+  height: auto;
+  margin-right: 20%;
+}
+
+.th-desc{
+  width: 100px;
+}
+
+.th-qty{
+  width: 20px;
+}
+
+.th-estimate{
+  width: 80px;
+}
+
+.th-tag{
+  width: 150px;
+}
+
+@media print {
+  body {
+     margin-top: 50%;
+   }
+   .search{
+     display: none;
+   } 
+ }
+ 
+ @page {
+   size: auto;
+   margin: 0mm;
+ }
